fixed z-indexes

--- a/css/style.css
+++ b/css/style.css
@@ -139,15 +139,14 @@ body {
 #youtube {
   width: 60vh;
   height: 32vh;
-  z-index: 4; }
+  z-index: 1; }
 
 @media screen and (max-device-width: 480px) {
   #youtube {
     width: 57vh;
     height: 33vh;
     max-width: 570px;
-    max-height: 330px;
-    /*background-color: rgba(187, 105, 105, 0.29);*/ } }
+    max-height: 330px; } }
 .bitcoin {
   position: relative;
   display: inline-block;
@@ -197,11 +196,11 @@ body {
   bottom: 15px;
   left: 50%;
   margin-left: -64px;
-  z-index: 1; }
+  z-index: 2; }
 
 #ladder {
   position: absolute;
-  z-index: 3;
+  z-index: 2;
   bottom: 4px;
   margin-left: -4px;
   pointer-events: visible;
